fix logo alignment (nav bar)

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -218,3 +218,10 @@ body {
 #classes {
     height: 150px;
 }
+
+img#logo {
+    float: left;
+    margin: 0 0px;
+    padding-top: 10px;
+    display: inline-block;
+}
